Parrafo y tamaño de fuente

--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html>
 <head>
 <title>Titulo de la Pagina</title>
+<link href="css/estilos.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 
 <h1>Esto es un encabezado</h1>
+<h2>PROYECTO EMPRESARIAL</h2>
 <p>Esto es un parrafo.</p>
 
 </body>
