--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <h1>Esto es un encabezado</h1>
 <h2>PROYECTO EMPRESARIAL</h2>
 <p>Esto es un parrafo.</p>
-
+<p>Parrafo Agregado</p>
 </body>
 </html>
